--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: eburnet <eburnet@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/29 10:12:18 by eburnet           #+#    #+#              #
-#    Updated: 2025/01/29 10:14:02 by eburnet          ###   ########.fr        #
+#    Updated: 2025/01/29 16:47:22 by eburnet          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,16 +14,16 @@ NAME = canon
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 SRCS = main.cpp Fixed.cpp
-OBJS = $(SRC:.cpp=.o)
+OBJS = $(SRCS:.cpp=.o)
 HEADERS = Fixed.hpp
 
-%.o: %.cpp
-	$(CC) $(FLAGS) -c $< -o $@
-
-$(NAME): $(OBJS)
-	$(CC) $(FLAGS) $(SRCS) -o $(NAME)
-
 all: $(NAME)
+
+$(NAME): $(OBJS) $(HEADERS)
+	$(CC) $(FLAGS) $(OBJS) -o $(NAME)
+
+%.o : %.cpp $(HEADERS)
+	$(CC) $(FLAGS) -c $< -o $(<:.cpp=.o)
 	
 clean:
 	rm -f $(OBJS)
@@ -33,4 +33,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re%  
+.PHONY: all clean fclean re
